# GDViewer

./: README.md  pyproject.toml
GDViewer/: __init__.py  gui.py  image_processing.py  log.py  main.py  utils.py
GDViewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
GDViewer/GDViewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
