[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GDViewer"
version = "0.1.0"
description = "A ZARR viewer using ImageJ."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "imagej",
    "zarr",
    "scyjava",
    "colorama",
    "tk"
]

[tool.setuptools.packages.find]
where = ["GDViewer"]

[project.scripts]
gdviewer = "GDViewer.main:main"

