[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GDViewer"
version = "0.1.0"
description = "A Globus ZARR viewer using ImageJ."
readme = "README.md"
authors = [
    { name = "Alberto Mittone", email = "amittone@anl.gov" }
]
dependencies = [
    "imagej",
    "zarr",
    "scyjava",
    "colorama",
    "tk",
    "click",
    "requests",
    "fsspec",
    "aiohttp"
]

[tool.setuptools.packages.find]
where = ["GDViewer"]

[project.scripts]
gdviewer = "GDViewer.main:main"

